--- a/settings.conf
+++ b/settings.conf
@@ -39,7 +39,7 @@ pass
 #12-IP pushgateway
 #13-Port pushgateway
 #14-Name of job pushgateway
-#15-customer e-mail (если не указан e-mail бота)
+#15-картинка для уведомлений бота (пустота, либо знаки 🗣, либо код, например <b>&#10060;</b>, )
 #16-SMTP hostname
 #17-SMTP сервер:port (465 def)
 #18-SMTP user
